--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
