--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
