--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
     "uuid": "^9.0.1",
