--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "sass": "^1.69.5",
