--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "greenjobgo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://greenjobgo.kr",
+  "proxy": "http://112.222.157.156",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
